# CustomAllocator

./: CMakeLists.txt  custom_allocator.h  custom_forward_list.h  main.cpp  tests.cpp
.github/workflows/: cmake.yml  cmake_.yml
